fix the style of buy button in thing on mobile

--- a/app/assets/stylesheets/views/things_mobile.css.scss
+++ b/app/assets/stylesheets/views/things_mobile.css.scss
@@ -248,7 +248,8 @@ html.things_show {
       > footer {
         padding: 10px;
 
-        .buy_button {
+        .btn-buy-mobile {
+          display: block;
           width: 100%;
         }
       }
